add postgresql password

--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -54,7 +54,7 @@ spring:
     type: com.zaxxer.hikari.HikariDataSource
     url: jdbc:postgresql://localhost:5432/JHipsterBugTrackerDemo
     username: JHipsterBugTrackerDemo
-    password:
+    password: 123456
     hikari:
       poolName: Hikari
       auto-commit: false
