--- a/src/main/docker/postgresql.yml
+++ b/src/main/docker/postgresql.yml
@@ -7,7 +7,7 @@ services:
     #   - ~/volumes/jhipster/JHipsterBugTrackerDemo/postgresql/:/var/lib/postgresql/data/
     environment:
       - POSTGRES_USER=JHipsterBugTrackerDemo
-      - POSTGRES_PASSWORD=
+      - POSTGRES_PASSWORD=123456
       - POSTGRES_HOST_AUTH_METHOD=trust
     # If you want to expose these ports outside your dev PC,
     # remove the "127.0.0.1:" prefix
