change keycloak url both dev and docker

--- a/src/main/resources/config/application.yml
+++ b/src/main/resources/config/application.yml
@@ -154,7 +154,7 @@ spring:
       client:
         provider:
           oidc:
-            issuer-uri: http://localhost:9080/auth/realms/jhipster
+            issuer-uri: http://52.194.255.243:9080/auth/realms/jhipster
         registration:
           oidc:
             client-id: web_app
