--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -52,9 +52,9 @@ spring:
       # it can be set to any label, branch or commit of the configuration source Git repository
   datasource:
     type: com.zaxxer.hikari.HikariDataSource
-    url: jdbc:postgresql://35.201.215.194:5432/jhipsterbugtrackerdemo
+    url: jdbc:postgresql://rds-postgresql-1.cak7lovvs5rs.ap-northeast-1.rds.amazonaws.com:5432/jhipsterbugtrackerdemo
     username: postgres
-    password: 123456
+    password: 12345678
     hikari:
       poolName: Hikari
       auto-commit: false
