--- a/src/main/docker/app.yml
+++ b/src/main/docker/app.yml
@@ -2,16 +2,16 @@
 version: '3.7'
 services:
   jhipsterbugtrackerdemo-app:
-    image: sishian/jhipsterbugtrackerdemo:0.1.1
+    image: sishian/jhipsterbugtrackerdemo:0.1.3
     environment:
       - _JAVA_OPTIONS=-Xmx512m -Xms256m
       - SPRING_PROFILES_ACTIVE=prod,api-docs
       - MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED=true
-      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/eureka
-      - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@jhipster-registry:8761/config
-      - SPRING_DATASOURCE_URL=jdbc:postgresql://jhipsterbugtrackerdemo-postgresql:5432/JHipsterBugTrackerDemo
-      - SPRING_LIQUIBASE_URL=jdbc:postgresql://jhipsterbugtrackerdemo-postgresql:5432/JHipsterBugTrackerDemo
-      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=http://keycloak:9080/auth/realms/jhipster
+      - EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE=http://admin:$${jhipster.registry.password}@3.112.132.112:8761/eureka
+      - SPRING_CLOUD_CONFIG_URI=http://admin:$${jhipster.registry.password}@3.112.132.112:8761/config
+      - SPRING_DATASOURCE_URL=jdbc:postgresql://rds-postgresql-1.cak7lovvs5rs.ap-northeast-1.rds.amazonaws.com:5432/jhipsterbugtrackerdemo
+      - SPRING_LIQUIBASE_URL=jdbc:postgresql://rds-postgresql-1.cak7lovvs5rs.ap-northeast-1.rds.amazonaws.com:5432/jhipsterbugtrackerdemo
+      - SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI=http://3.112.132.112:9080/auth/realms/jhipster
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID=web_app
       - SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET=web_app
       - JHIPSTER_SLEEP=30 # gives time for other services to boot before the application
