--- a/src/main/k8s/jhipsterbugtrackerdemo-app-deployment.yaml
+++ b/src/main/k8s/jhipsterbugtrackerdemo-app-deployment.yaml
@@ -26,28 +26,28 @@ spec:
       containers:
       - env:
         - name: EUREKA_CLIENT_SERVICE_URL_DEFAULTZONE
-          value: http://admin:${jhipster.registry.password}@jhipster-registry:8761/eureka
+          value: http://admin:${jhipster.registry.password}@3.112.132.112:8761/eureka
         - name: JHIPSTER_SLEEP
           value: "30"
         - name: MANAGEMENT_METRICS_EXPORT_PROMETHEUS_ENABLED
           value: "true"
         - name: SPRING_CLOUD_CONFIG_URI
-          value: http://admin:${jhipster.registry.password}@jhipster-registry:8761/config
+          value: http://admin:${jhipster.registry.password}@3.112.132.112:8761/config
         - name: SPRING_DATASOURCE_URL
-          value: jdbc:postgresql://jhipsterbugtrackerdemo-postgresql:5432/JHipsterBugTrackerDemo
+          value: jdbc:postgresql://rds-postgresql-1.cak7lovvs5rs.ap-northeast-1.rds.amazonaws.com:5432/jhipsterbugtrackerdemo
         - name: SPRING_LIQUIBASE_URL
-          value: jdbc:postgresql://jhipsterbugtrackerdemo-postgresql:5432/JHipsterBugTrackerDemo
+          value: jdbc:postgresql://rds-postgresql-1.cak7lovvs5rs.ap-northeast-1.rds.amazonaws.com:5432/jhipsterbugtrackerdemo
         - name: SPRING_PROFILES_ACTIVE
           value: prod,api-docs
         - name: SPRING_SECURITY_OAUTH2_CLIENT_PROVIDER_OIDC_ISSUER_URI
-          value: http://keycloak:9080/auth/realms/jhipster
+          value: http://3.112.132.112:9080/auth/realms/jhipster
         - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_ID
           value: web_app
         - name: SPRING_SECURITY_OAUTH2_CLIENT_REGISTRATION_OIDC_CLIENT_SECRET
           value: web_app
         - name: _JAVA_OPTIONS
           value: -Xmx512m -Xms256m
-        image: sishian/jhipsterbugtrackerdemo:latest
+        image: sishian/jhipsterbugtrackerdemo:0.1.3
         imagePullPolicy: ""
         name: jhipsterbugtrackerdemo-app
         ports:
