--- a/src/main/k8s/keycloak-service.yaml
+++ b/src/main/k8s/keycloak-service.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   annotations:
-    kompose.cmd: kompose --file ../docker/app.yml convert
+    kompose.cmd: kompose --file ../docker/keycloak-prod.yml convert
     kompose.version: 1.21.0 (992df58d8)
   creationTimestamp: null
   labels:
