--- a/src/main/resources/config/application-prod.yml
+++ b/src/main/resources/config/application-prod.yml
@@ -24,7 +24,7 @@ eureka:
     prefer-ip-address: true
   client:
     service-url:
-      defaultZone: http://admin:${jhipster.registry.password}@localhost:8761/eureka/
+      defaultZone: http://admin:${jhipster.registry.password}@3.112.132.112:8761/eureka/
 
 management:
   metrics:
@@ -44,7 +44,7 @@ spring:
         initial-interval: 1000
         max-interval: 2000
         max-attempts: 100
-      uri: http://admin:${jhipster.registry.password}@localhost:8761/config
+      uri: http://admin:${jhipster.registry.password}@3.112.132.112:8761/config
       # name of the config server's property source (file.yml) that we want to use
       name: JHipsterBugTrackerDemo
       profile: prod
@@ -122,7 +122,7 @@ jhipster:
     use-json-format: false # By default, logs are not in Json format
     logstash: # Forward logs to logstash over a socket, used by LoggingConfiguration
       enabled: false
-      host: localhost
+      host: 3.112.132.112
       port: 5000
       queue-size: 512
 # ===================================================================
