--- a/pom.xml
+++ b/pom.xml
@@ -591,7 +591,7 @@
                             <image>adoptopenjdk:11-jre-hotspot</image>
                             <auth>
                                 <username>sishian</username>
-                                <password>Qsx!!912532</password>
+                                <password>qsx19980724</password>
                             </auth>
                         </from>
                         <to>
