change publish docker method

--- a/pom.xml
+++ b/pom.xml
@@ -598,7 +598,7 @@
                             <image>docker.io/sishian/jhipsterbugtrackerdemo:latest</image>
                             <auth>
                                 <username>sishian</username>
-                                <password>Qsx!!912532</password>
+                                <password>qsx19980724</password>
                             </auth>
                         </to>
                         <container>
